index copy.html

--- a/index copy.html
+++ b/index copy.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://lens.usercontent.google.com/image?vsrid=CKWd-fvn4frQywEQAhgBIiRmNTBmZWJiYi0zYWQ0LTQ1NjAtODFmMi05MGYwNjM5NWZlYmQyBiICdHAoJjjk25Wu3KePAw&gsessionid=gUvnAh9vUoinNY0wyfIHf595Vl5gAnpaTOGxW4RztyJEUu2YphX4Lg.jpg" alt="Logo Suara Merdeka" class="logo">
+            <img src="d:\ROKHIMX TJKT\suaramerdeka.com.png" alt="Logo Suara Merdeka" class="logo">
             TOP STORIES
         </div>
         <table>
@@ -97,4 +97,5 @@
     </div>
 </body>
 </html>
+
 
