--- a/index copy.html
+++ b/index copy.html
@@ -69,27 +69,27 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="d:\ROKHIMX TJKT\suaramerdeka.com.png" alt="Logo Suara Merdeka" class="logo">
+            <img src="d:\gambar html\suaramerdeka.com.png" alt="Logo Suara Merdeka" class="logo">
             TOP STORIES
         </div>
         <table>
             <tr>
                 <td>
-                    <img src="d:\ROKHIMX TJKT\toyota.jpg" alt="Toyota FJ Cruiser">
+                    <img src="d:\gambar html\toyota.jpg" alt="Toyota FJ Cruiser">
                     <div class="caption"><a href="toyota.html">Toyota Pasarkan FJ Cruiser untuk Konsumen Jepang</a></div>
                 </td>
                 <td>
-                    <img src="d:\ROKHIMX TJKT\cobra.jpg" alt="Ular Kobra">
+                    <img src="d:\gambar html\cobra.jpg" alt="Ular Kobra">
                     <div class="caption"><a href="cobra.html">"Ular Kobra" Berkeliaran di Jalan Raya</a></div>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="d:\ROKHIMX TJKT\honda.jpg" alt="Honda Masuk Sekolah Kejuruan">
+                    <img src="d:\gambar html\honda.jpg" alt="Honda Masuk Sekolah Kejuruan">
                     <div class="caption"><a href="honda.html">Honda Masuk Sekolah-Sekolah Kejuruan</a></div>
                 </td>
                 <td>
-                    <img src="d:\ROKHIMX TJKT\pigeot.jpg" alt="Peugeot 5008">
+                    <img src="d:\gambar html\pigeot.jpg" alt="Peugeot 5008">
                     <div class="caption"><a href="puetgeo.html">Peugeot 5008 Dipasarkan Rp 475,5 Juta</a></div>
                 </td>
             </tr>
@@ -97,5 +97,3 @@
     </div>
 </body>
 </html>
-
-
